[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "^0.20.1", features = ["persistence"] }
egui = "0.20.1"
serde = { version = "^1.0.152", features = ["derive"] }
uuid = { version = "^1.2.2", features = ["serde", "v4"] }
